# automated_mv_agent

./: .dockerignore  .env.example  Agente de Automação VR  .json  Agente de Automação VR.json  Dockerfile  Dockerfile.streamlit  README.md  compose.yml
backend/: pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/services/: file_download.py  sheet_data_processing.py
client/src/: main.py
interface/: pyproject.toml  requirements.txt
interface/src/: main.py
