[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
]

[tool.ruff.format]
quote-style = 'single'
